// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extensions.enabled.tx (provider=cockroachdb) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.tx (provider=cockroachdb) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/enabled/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.tx (provider=mongodb) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.enabled.tx (provider=mongodb) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/enabled/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.enabled.tx (provider=mysql) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.enabled.tx (provider=mysql) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/enabled/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.enabled.tx (provider=postgresql) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.tx (provider=postgresql) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/enabled/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.tx (provider=sqlite) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.tx (provider=sqlite) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/enabled/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.tx (provider=sqlserver) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`dbo.User\`
`;

exports[`extensions.enabled.tx (provider=sqlserver) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/enabled/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`
`;
